--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nuogz/postgresql",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"description": "postgresql library based on pg",
 	"author": "Nuogz",
 	"license": "LGPL-3.0-or-later",
@@ -17,14 +17,19 @@
 	"files": [
 		"index.js",
 		"lib/**",
-		"locale/**"
+		"locale/**",
+		"**/*.d.ts"
 	],
+	"scripts": {
+		"emitDeclaration": "tsc ./index.js --declaration --emitDeclarationOnly --allowJs --preserveSymlinks"
+	},
 	"dependencies": {
-		"@nuogz/class-inject-leveled-log": "^1.0.0",
-		"@nuogz/i18n": "^1.2.1",
-		"pg": "^8.8.0"
+		"@nuogz/i18n": "^1.3.2",
+		"@nuogz/utility": "^1.5.1",
+		"pg": "^8.9.0"
 	},
 	"devDependencies": {
-		"eslint": "^8.22.0"
+		"eslint": "^8.33.0",
+		"typescript": "^4.9.5"
 	}
 }
