--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nuogz/postgresql",
-	"version": "1.1.2",
+	"version": "1.1.3",
 	"description": "postgresql library based on pg",
 	"author": "Nuogz",
 	"license": "LGPL-3.0-or-later",
@@ -8,8 +8,8 @@
 		"type": "git",
 		"url": "github:nuogz/postgresql"
 	},
-	"type": "module",
 	"typesSource": [],
+	"type": "module",
 	"engines": {
 		"node": ">=14.18.1"
 	},
@@ -21,7 +21,7 @@
 		"**/*.d.ts"
 	],
 	"scripts": {
-		"emitDeclaration": "tsc ./index.js --declaration --emitDeclarationOnly --allowJs --preserveSymlinks"
+		"emitDeclaration": "tsc ./index.js --declaration --emitDeclarationOnly --allowJs --moduleResolution nodenext --module esnext --target esnext --experimentalDecorators"
 	},
 	"dependencies": {
 		"@nuogz/i18n": "^3.1.0",
@@ -29,7 +29,8 @@
 		"pg": "^8.10.0"
 	},
 	"devDependencies": {
-		"eslint": "^8.37.0",
+		"@types/pg": "^8.6.6",
+		"eslint": "^8.40.0",
 		"typescript": "^4.9.5"
 	}
 }
