--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nuogz/postgresql",
-	"version": "1.1.3",
+	"version": "1.1.4",
 	"description": "postgresql library based on pg",
 	"author": "Nuogz",
 	"license": "LGPL-3.0-or-later",
@@ -13,7 +13,7 @@
 	"engines": {
 		"node": ">=14.18.1"
 	},
-	"main": "index.js",
+	"main": "./index.js",
 	"files": [
 		"index.js",
 		"lib/**",
