--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-	"files.trimTrailingWhitespace": true,
-	"javascript.preferences.importModuleSpecifierEnding": "js",
+	"eslint.experimental.useFlatConfig": true,
+	"files.trimTrailingWhitespace": true
 }
