--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
 	"name": "@nuogz/postgresql",
-	"version": "1.1.4",
+	"version": "1.2.0",
 	"description": "postgresql library based on pg",
-	"author": "Nuogz",
+	"author": "DanoR",
 	"license": "LGPL-3.0-or-later",
 	"repository": {
 		"type": "git",
 		"url": "github:nuogz/postgresql"
 	},
-	"typesSource": [],
+	"private": false,
 	"type": "module",
+	"typesSource": [
+		"node"
+	],
+	"sideEffects": false,
 	"engines": {
 		"node": ">=14.18.1"
 	},
@@ -20,17 +24,18 @@
 		"locale/**",
 		"**/*.d.ts"
 	],
+	"typings": "./index.d.ts",
 	"scripts": {
-		"emitDeclaration": "tsc ./index.js --declaration --emitDeclarationOnly --allowJs --moduleResolution nodenext --module esnext --target esnext --experimentalDecorators"
+		"emitDeclaration": "tsc ./index.js --declaration --emitDeclarationOnly --moduleResolution bundler --module esnext --target esnext --experimentalDecorators --strict --allowJs --jsx preserve"
 	},
 	"dependencies": {
-		"@nuogz/i18n": "^3.1.0",
-		"@nuogz/utility": "^1.6.5",
-		"pg": "^8.10.0"
+		"@nuogz/i18n": "^3.3.1",
+		"@nuogz/utility": "^1.8.1",
+		"pg": "^8.11.3"
 	},
 	"devDependencies": {
-		"@types/pg": "^8.6.6",
-		"eslint": "^8.40.0",
-		"typescript": "^4.9.5"
+		"@types/pg": "^8.10.9",
+		"eslint": "^8.55.0",
+		"typescript": "^5.3.3"
 	}
 }
